# EduLearn_Desktop

./: .env.example  .gitignore  ELECTRON_SECURITY_REVIEW.md  PACKAGING.md  electron-builder.yml  package-lock.json  package.json
bootstrapper/: Cargo.toml
bootstrapper/src/: emergency_widget.rs  main.rs
deployment/windows-lab/: Audit-ExamLabPolicy.ps1  Enforce-ExamLabPolicy.ps1  README.md  enforced-lab-profile.json  managed-lab-profile.json
desktop-isolation-prototype/: Cargo.toml
desktop-isolation-prototype/src/: main.rs
edulearn-exam-service/: .gitignore  Cargo.toml  Install-ExamGuardService.ps1  README.md  Setup-ExamGuardService.ps1  derive-trusted-key.mjs  generate-service-keys.mjs  provision-desktop-env.mjs  provision-dev-keys.mjs  rebuild-and-repin.generated.ps1  repin-service.generated.ps1  stop
edulearn-exam-service/src/: authorization.rs  main.rs  transport.rs
native-tests/: Run-EtwProducerSmoke.ps1  Run-ExamGuardMatrix.ps1  acceptance-matrix.json  audit-sync.js  capture-evidence-checklist.json  desktop-isolation-checklist.json  evidence-schema.json  fault-injection-checklist.json  matrix.json  performance-gate.js  release-gate.js  release-report.js  validation-report.js
native-tests/release-evidence/: README.md
native-tests/results/: exam-guard-matrix-20260629-222510.json  exam-guard-matrix-20260630-184750.json  exam-guard-matrix-20260630-214451.json  exam-guard-matrix-20260630-214727.json  exam-guard-matrix-20260630-222101.json  exam-guard-matrix-20260630-224803.json  exam-guard-matrix-20260701-115213.json  (+1 more)
rust-core/: Cargo.toml  UNSAFE_INVARIANTS.md
rust-core/src/: accessibility_guard.rs  anti_debug.rs  audit_log.rs  bootstrapper_control.rs  capture_guard.rs  clipboard_guard.rs  collectors.rs  desktop_isolation.rs  desktop_state.rs  display_guard.rs  dpi_awareness.rs  emergency_widget.rs  etw_producer.rs  evaluation.rs  exam_key.rs  ffi_guards.rs  focus_guard.rs  guard_liveness.rs  input_guard.rs  ipc_auth.rs  ipc_pipe.rs  kiosk_guard.rs  main.rs  models.rs  mouse_guard.rs  policy.rs  policy_loader.rs  policy_model.rs  policy_signature.rs  process_heuristics.rs  process_policy.rs  process_remediation.rs  process_watcher.rs  runtime_events.rs  runtime_monitor.rs  runtime_policy.rs  runtime_scheduler.rs  runtime_state_engine.rs  runtime_telemetry.rs  service_client.rs  (+2 more)
rust-core/src/rules/: debug_tools_rule.rs  mod.rs  monitor_rule.rs  policy_blocked_rule.rs  remote_rule.rs  screen_capture_rule.rs  vm_rule.rs
scripts/: core-binary.js  dev.js  generate-integrity-manifest.js  open-electron.js  open-protected-electron.js  print-csp.js  verify-csp-nonce-runtime.js  verify-csp-runtime.js  verify-devtools-runtime.js  verify-sandbox-preload.js
src/: app-integrity.js  audio-guard.js  capability-token.js  core-runtime.js  deeplink.js  exam-desktop-launcher.js  exam-exit-verify.js  exam-guard-trace.js  exam-session-handoff.js  ipc-auth.js  ipc.js  logger.js  main.js  preload.js  protected-launch-plan.js  protection-controller.js  rust-sidecar.js  state-governor.js  watchdog-heartbeat.js  window.js
test/: app-integrity.test.js  audio-guard.test.js  capability-token.test.js  core-runtime.test.js  csp.test.js  exam-exit-verify.test.js  exam-shell-profile-isolation.test.js  ipc-auth-v2.test.js  ipc-auth.test.js  ipc-authorization.test.js  ipc-authz.test.js  logger.test.js  main-window-manager.test.js  named-pipe.integration.js  native-matrix.test.js  overlay-manager.test.js  production-closure-gates.test.js  protected-launch-plan.test.js  release-report.test.js  rust-sidecar-ipc-mode.test.js  signed-url-allowlist.test.js  state-governor.test.js  url-filter-signed.test.js  url-filter.test.js  validation-report.test.js  watchdog-heartbeat.test.js  window-hardening.test.js  windows-lab-profile.test.js
(+10 files in other folders)
