[package]
name = "edulearn-bootstrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
getrandom = "0.2"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security", "Win32_System_JobObjects", "Win32_System_StationsAndDesktops", "Win32_System_Threading"] }
