[package]
name = "rust-core"
version = "0.0.1"
edition = "2021"

# F-004 / release hardening: strip symbols + LTO shrink the binary and remove
# names/paths that ease reverse engineering; panic=abort avoids unwind tables and
# is fine here (no catch_unwind in the tree — the service watchdog restarts the
# core). Does not affect `cargo test` (test profile inherits dev, keeps unwind).
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
base64 = "0.22"
# F-005: `zeroize` feature makes ed25519-dalek SigningKey wipe its secret on drop.
ed25519-dalek = { version = "2", features = ["zeroize"] }
hmac = "0.12"
getrandom = "0.2"
# F-005: zero secret buffers (IPC MAC secret, decrypted key seeds) on drop.
zeroize = "1"
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.30"
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock", "Win32_Security", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_System_DataExchange", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_Etw", "Win32_System_IO", "Win32_System_LibraryLoader", "Win32_System_Pipes", "Win32_System_StationsAndDesktops", "Win32_System_Threading", "Win32_System_Time", "Win32_UI_Accessibility", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
